# pipeline

./: .gitmodules  CMakeLists.txt  README.rst  arguments.hpp  error.hpp  job.hpp  pipeline.cpp  pipeline.hpp  task.hpp
engine/: engine.cpp  engine.hpp  job_worker.cpp  job_worker.hpp
input/: job_parser.cpp  job_parser.hpp  persistence.cpp  persistence.hpp  simple_work_provider.cpp  simple_work_provider.hpp  tasks.cpp  tasks.hpp
python/: setup.py
python/pipeline/: __init__.py  __main__.py
test/: test.py
test/subdir/: test.py  test2.py
util/: filesystem.cpp  filesystem.hpp
work/: work.hpp
